--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
 
   
 </head>
@@ -103,7 +103,7 @@
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/index.js"></script>
 
 
 
