--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   
       <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
-      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
+      <script src="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss"></script>
 
   
 </head>
