--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   
       <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
+      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
 
   
 </head>
