--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
+  <link rel="stylesheet" type="text/css" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
 
   
 </head>
@@ -16,7 +17,7 @@
 <body>
 
   <div class="wrap">  
-  <h1>Draft <strong>Countdown</strong></h1>
+  <h1>Nokori<strong>Jikan は</strong></h1>
 
   <div class="countdown">
     <div class="bloc-time hours" data-init-value="24">
@@ -103,7 +104,7 @@
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/index.js"></script>
 
 
 
