--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="countdown">
     <div class="bloc-time hours" data-init-value="24">
-      <span class="count-title">Hours</span>
+      <span class="count-title">Jikan-時間</span>
 
       <div class="figure hours hours-1">
         <span class="top">2</span>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="bloc-time min" data-init-value="0">
-      <span class="count-title">Minutes</span>
+      <span class="count-title">Bun-分</span>
 
       <div class="figure min min-1">
         <span class="top">0</span>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="bloc-time sec" data-init-value="0">
-      <span class="count-title">Seconds</span>
+      <span class="count-title">Byō-秒</span>
 
         <div class="figure sec sec-1">
         <span class="top">0</span>
