--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
 
   
 </head>
@@ -16,11 +16,10 @@
 <body>
 
   <div class="wrap">  
-  <h1>Draft <strong>Countdown</strong></h1>
-
+  <h1>Nokori<strong>Jikan は</strong></h1>
   <div class="countdown">
     <div class="bloc-time hours" data-init-value="24">
-      <span class="count-title">Hours</span>
+      <span class="count-title">Jikan</span>
 
       <div class="figure hours hours-1">
         <span class="top">2</span>
@@ -46,7 +45,7 @@
     </div>
 
     <div class="bloc-time min" data-init-value="0">
-      <span class="count-title">Minutes</span>
+      <span class="count-title">Bun</span>
 
       <div class="figure min min-1">
         <span class="top">0</span>
@@ -72,7 +71,7 @@
     </div>
 
     <div class="bloc-time sec" data-init-value="0">
-      <span class="count-title">Seconds</span>
+      <span class="count-title">Byō</span>
 
         <div class="figure sec sec-1">
         <span class="top">0</span>
@@ -103,7 +102,7 @@
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/index.js"></script>
 
 
 
