--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   
       <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
-      <link rel="stylesheet" type="text/scss" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
+      <link rel="stylesheet" type="text/css3" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
   
 </head>
 
