--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
-      <link rel="stylesheet" type="text/css3" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
+      <link rel="stylesheet" type="text/css" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.css">
+      <link rel="stylesheet" type="text/css" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
   
 </head>
 
