--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Draft Countdown</title>
-  <link rel="stylesheet" type="text/css" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
+  <link rel="stylesheet" type="text/scss" href="https://raw.githack.com/harunkunwenker/Draft-Countdown/get/style.scss">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
